--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,19 @@
 .cool {
     z-index: 999;
 }
+
+html,
+body,
+div#__next {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.form {
+  border-radius: 10px;
+  border: 0.5px solid #FFF60D;
+  background: linear-gradient(104deg, rgba(255, 255, 255, 0.45) 0%, rgba(255, 255, 255, 0.10) 100%);
+  box-shadow: 0px 4px 25px 0px rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(15px);
+}
